--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="frame" role="application">
     <header>
       <div class="title-box">
-        <h1>Մասնագիտական կողմնորոշման թեստ</h1>
+        <h1>ԻՄ ԱՊԱԳԱ ՄԱՍՆԱԳԻՏՈՒԹՅՈՒՆԸ․․․</h1>
         <p class="lead">Պատասխանի՛ր բոլոր հարցերին միայն «Այո» կամ «Ոչ» և ստացիր մինչև 3 մասնագիտության առաջարկ</p>
       </div>
       <div style="text-align:right;color:var(--muted);font-size:13px">Step-by-step · Գունեղ դիզայն</div>
@@ -83,26 +83,26 @@
     <main class="stage" id="stage"></main>
 
     <footer>
-      <div style="color:var(--muted);font-size:13px">Թեստի արդյունքը մոտավոր է՝ կրթական բնույթի</div>
-      <div style="font-weight:700;color:var(--accent-1)">Եկեք սկսենք 🚀</div>
+      <div style="color:var(--muted);font-size:13px">Թեստի արդյունքը մոտավոր է և կրում է կրթական բնույթ</div>
+      <div style="font-weight:700;color:var(--accent-1)">© Նախագծային աշխատանք</div>
     </footer>
   </div>
 
   <script>
     const questions = [
-      {q:'Դու հաճույքով լուծում ես տրամաբանական խնդիրներ?', map:{IT:2, Engineering:1, Research:1}},
-      {q:'Սիրում ես ստեղծագործել՝ նկարել, դիզայն անել կամ երաժշտությամբ զբաղվել?', map:{Art:3, Design:2, Media:1}},
-      {q:'Սիրում ես մարդկանց օգնել և շփվել?', map:{Healthcare:3, Teaching:2, SocialWork:1}},
-      {q:'Թվերի հետ աշխատելը քեզ դուր է գալիս?', map:{Finance:3, DataScience:2, Business:1}},
-      {q:'Հաճույք ես ստանում սարքերի ու մեխանիկայի հետ աշխատելիս?', map:{Engineering:3, IT:1}},
+      {q:'Դու հաճույքով լուծու՞մ ես տրամաբանական խնդիրներ', map:{IT:2, Engineering:1, Research:1}},
+      {q:'Սիրու՞մ ես ստեղծագործել՝ նկարել, դիզայն անել կամ երաժշտությամբ զբաղվել', map:{Art:3, Design:2, Media:1}},
+      {q:'Սիրու՞մ ես մարդկանց օգնել և շփվել', map:{Healthcare:3, Teaching:2, SocialWork:1}},
+      {q:'Թվերի հետ աշխատելը քեզ դու՞ր է գալիս', map:{Finance:3, DataScience:2, Business:1}},
+      {q:'Հաճույք ես ստանում սարքերի ու մեխանիկայի հետ աշխատելի՞ս', map:{Engineering:3, IT:1}},
       {q:'Պատրա՞ստ ես երկար ուսումնառության և հետազոտական աշխատանքի համար:', map:{Research:3, Medicine:2}},
       {q:'Կուզե՞ս ղեկավարել մարդկանց և թիմեր:', map:{Business:3, Management:2, Teaching:1}},
       {q:'Կուզե՞ս աշխատել լրատվության/մեդիայի ոլորտում:', map:{Media:3, Design:1, Business:1}},
       {q:'Ցանկանու՞մ ես սեփական բիզնես սկսել:', map:{Business:3, Finance:1}},
-      {q:'Սիրում ես դրսում ակտիվ աշխատանքներ կատարել:', map:{Agriculture:3, Engineering:1}},
+      {q:'Սիրու՞մ ես դրսում ակտիվ աշխատանքներ կատարել:', map:{Agriculture:3, Engineering:1}},
       {q:'Կուզե՞ս անկախ կամ ֆրիլանս աշխատել:', map:{Design:2, IT:2, Media:2}},
-      {q:'Արագ որոշումներ կայացնելը քեզ համար հեշտ է:', map:{Healthcare:2, Business:1, IT:1}},
-      {q:'Վայելում ես մանրուքների վրա կենտրոնանալը լաբորատոր պայմաններում:', map:{Science:2, Medicine:2, Research:1}}
+      {q:'Արագ որոշումներ կայացնելը քեզ համար հե՞շտ է:', map:{Healthcare:2, Business:1, IT:1}},
+      {q:'Վայելու՞մ ես մանրուքների վրա կենտրոնանալը լաբորատոր պայմաններում:', map:{Science:2, Medicine:2, Research:1}}
     ];
 
     const careers = {
