--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1>ԻՄ ԱՊԱԳԱ ՄԱՍՆԱԳԻՏՈՒԹՅՈՒՆԸ․․․</h1>
         <p class="lead">Պատասխանի՛ր բոլոր հարցերին միայն «Այո» կամ «Ոչ» և ստացիր մինչև 3 մասնագիտության առաջարկ</p>
       </div>
-      <div style="text-align:right;color:var(--muted);font-size:13px">Step-by-step · Գունեղ դիզայն</div>
+      <div style="text-align:right;color:var(--muted);font-size:13px">ՀՄՏՈՒԹՅՈՒՆԻՑ՝ ՄԱՍՆԱԳԻՏՈՒՅՈՒՆ․․․🚀</div>
     </header>
 
     <main class="stage" id="stage"></main>
